<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#CBFEFF">
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="30dp"
        android:background="#54A0FA"
        android:textColor="@color/black"
        android:text="@string/titulo2">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#54A0FA"
            android:textColor="@color/black"
            android:text="@string/welcome"
            android:textSize="30dp"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:hint="Dato 1:"
            android:id="@+id/dato1"
            android:textSize="23dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:hint="Dato 2:"
            android:id="@+id/dato2"
            android:textSize="23dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:hint="Dato 3:"
            android:id="@+id/dato3"
            android:textSize="23dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="6dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#54A0FA"
            android:textColor="@color/black"
            android:text="@string/cuerpo"
            android:textSize="25dp"
            android:gravity="center">
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web"
            android:id="@+id/webSicau"
            android:textSize="25dp"
            android:gravity="center"
            android:backgroundTint="#00BB2D"
            app:icon="@drawable/ic_login"
            app:iconGravity="textEnd">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AbrirGoogle"
            android:id="@+id/webGoogle"
            android:textSize="25dp"
            android:gravity="center"
            android:backgroundTint="#FF3700B3"
            app:icon="@drawable/ic_language"
            app:iconGravity="textEnd">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app"
            android:id="@+id/camara"
            android:textSize="25dp"
            android:gravity="center"
            android:backgroundTint="#BC8BF9"
            app:icon="@drawable/ic_camara"
            app:iconGravity="textEnd">
        </Button>
    </LinearLayout>
</LinearLayout>
