<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#CBFEFF">
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="30dp"
        android:background="#54A0FA"
        android:textColor="@color/black"
        android:text="@string/titulo">
    </TextView>
    <ImageView
        android:layout_width="196dp"
        android:layout_height="191dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_perfil">
    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#54A0FA"
            android:textColor="@color/black"
            android:text="@string/usu_name"
            android:textSize="30dp"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_user">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:hint="Ingrese Su Nombre"
            android:id="@+id/ingresar_nombre"
            android:textSize="23dp">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:hint="Ingrese Su Apellido"
            android:id="@+id/ingresar_apellido"
            android:textSize="23dp">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="6dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#54A0FA"
            android:textColor="@color/black"
            android:text="@string/password"
            android:textSize="30dp"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_lock">
        </TextView>
        <EditText
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:hint="Ingrese Su Contraseña"
            android:id="@+id/ingresar_password"
            android:textSize="23dp">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <Button
            android:onClick="ingresar"
            android:id="@+id/click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00BB2D"
            android:gravity="center"
            android:text="@string/ingresar"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:icon="@drawable/ic_login"
            app:iconGravity="textEnd">
        </Button>
    </LinearLayout>
</LinearLayout>
